--- a/src/main/resources/model/burger-view.fxml
+++ b/src/main/resources/model/burger-view.fxml
@@ -1,93 +1,228 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="500.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.SecondViewController">
-   <left>
-      <VBox alignment="CENTER" prefHeight="308.0" prefWidth="218.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets left="30.0" />
-         </BorderPane.margin>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.BurgerController">
+   <top>
+      <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="125.0" prefWidth="800.0" style="-fx-background-color: #E06C5A;" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="menuButton" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#displayMain" prefHeight="24.0" prefWidth="179.0" style="-fx-background-color: pink; -fx-border-color: green;" text="Go back to Main Menu">
-               <VBox.margin>
-                  <Insets bottom="50.0" top="20.0" />
-               </VBox.margin>
-               <font>
-                  <Font size="12.0" />
-               </font>
-            </Button>
-            <Button mnemonicParsing="false" onAction="#showValue" prefHeight="24.0" prefWidth="197.0" text="a value in MainController" />
-            <ComboBox fx:id="cmb_color" onAction="#displaySelected" prefWidth="150.0" promptText="colors">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin></ComboBox>
-            <Button mnemonicParsing="false" onAction="#removeColor" prefHeight="24.0" prefWidth="218.0" text="remove a color from the list">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-   </left>
-   <right>
-      <VBox alignment="CENTER_LEFT" prefHeight="400.0" prefWidth="225.0" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets left="25.0" />
-         </BorderPane.margin>
-         <children>
-            <Label text="ListView Example">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </Label>
-            <ListView fx:id="lv_fruit" maxHeight="150.0" maxWidth="150.0" onMouseClicked="#displayFruit" prefHeight="150.0" prefWidth="150.0">
-               <VBox.margin>
-                  <Insets top="20.0" />
-               </VBox.margin>
-            </ListView>
-            <ComboBox fx:id="cmb_fruit" prefWidth="150.0" promptText="fruits">
-               <VBox.margin>
-                  <Insets top="15.0" />
-               </VBox.margin>
-            </ComboBox>
-            <Label text="ListView Multi-select">
-               <VBox.margin>
-                  <Insets left="10.0" top="10.0" />
-               </VBox.margin>
-            </Label>
-            <ListView fx:id="lv_person" maxHeight="150.0" maxWidth="150.0" prefHeight="150.0" prefWidth="150.0">
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
-            </ListView>
-            <Button mnemonicParsing="false" onAction="#displayPeople" text="show selected">
-               <VBox.margin>
-                  <Insets top="5.0" />
-               </VBox.margin>
-            </Button>
-         </children>
-      </VBox>
-   </right>
-   <bottom>
-      <HBox BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="30.0" />
-         </BorderPane.margin>
-         <children>
-            <Label style="-fx-background-color: PINK;" text="Output">
+            <VBox maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="100.0" prefWidth="100.0">
+               <children>
+                  <Button fx:id="backButton" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#backToMenu" prefHeight="50.0" prefWidth="80.0" style="-fx-background-color: #E06C5A;">
+                     <VBox.margin>
+                        <Insets />
+                     </VBox.margin>
+                     <graphic>
+                        <ImageView fitHeight="50.0" fitWidth="100.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@xButton.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
+                  </Button>
+               </children>
                <HBox.margin>
-                  <Insets left="20.0" right="20.0" top="5.0" />
+                  <Insets right="100.0" />
                </HBox.margin>
+            </VBox>
+            <Label alignment="CENTER" text="Burgers" textFill="WHITE">
                <font>
-                  <Font size="16.0" />
+                  <Font name="Georgia Bold" size="60.0" />
                </font>
+               <HBox.margin>
+                  <Insets right="140.0" />
+               </HBox.margin>
             </Label>
-            <Label fx:id="output" prefHeight="25.0" prefWidth="366.0" style="-fx-background-color: #ccff99;" />
+            <ImageView fitHeight="150.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@burgerIcon.png" />
+               </image>
+               <HBox.margin>
+                  <Insets right="62.0" />
+               </HBox.margin>
+            </ImageView>
          </children>
+         <BorderPane.margin>
+            <Insets />
+         </BorderPane.margin>
+      </HBox>
+   </top>
+   <bottom>
+      <HBox alignment="CENTER_LEFT" prefHeight="125.0" prefWidth="800.0" style="-fx-background-color: #E06C5A;" BorderPane.alignment="CENTER">
+         <children>
+            <Label text="Subtotal:" textFill="WHITE">
+               <font>
+                  <Font name="Georgia Bold" size="24.0" />
+               </font>
+               <padding>
+                  <Insets right="10.0" />
+               </padding>
+            </Label>
+            <TextField fx:id="priceField" editable="false" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="40.0" prefWidth="120.0" style="-fx-background-color: E06C5A; -fx-text-fill: FFFFFF;" text="\$0.00">
+               <font>
+                  <Font name="Times New Roman Bold" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets right="30.0" />
+               </HBox.margin>
+            </TextField>
+            <Button fx:id="addOrder" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#addToOrder" prefHeight="45.0" prefWidth="175.0" style="-fx-background-color: #84b065;" text="Add to Order" textFill="WHITE">
+               <font>
+                  <Font name="Georgia" size="24.0" />
+               </font>
+               <HBox.margin>
+                  <Insets right="55.0" />
+               </HBox.margin>
+            </Button>
+            <Button fx:id="makeCombo" layoutX="324.0" layoutY="50.0" maxHeight="-Infinity" maxWidth="-Infinity" mnemonicParsing="false" onAction="#makeCombo" prefHeight="45.0" prefWidth="175.0" style="-fx-background-color: #84b065;" text="Combo" textFill="WHITE">
+               <font>
+                  <Font name="Georgia" size="24.0" />
+               </font>
+            </Button>
+         </children>
+         <opaqueInsets>
+            <Insets />
+         </opaqueInsets>
+         <padding>
+            <Insets left="40.0" />
+         </padding>
       </HBox>
    </bottom>
+   <center>
+      <GridPane BorderPane.alignment="CENTER">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="392.5553894042969" minWidth="10.0" prefWidth="219.77696228027344" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="627.2414855957031" minWidth="10.0" prefWidth="580.2230377197266" />
+        </columnConstraints>
+        <rowConstraints>
+            <RowConstraints maxHeight="120.35301208496094" minHeight="10.0" prefHeight="97.66618347167969" vgrow="SOMETIMES" />
+            <RowConstraints maxHeight="133.35302734375" minHeight="10.0" prefHeight="89.88848876953125" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="279.61151123046875" minHeight="10.0" prefHeight="261.38848876953125" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="118.33380126953125" minHeight="3.497802734375" prefHeight="100.61151123046875" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <Label text="Number of Patties" GridPane.halignment="RIGHT">
+               <font>
+                  <Font name="Georgia Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="52.0" layoutY="57.0" text="Bread" GridPane.halignment="RIGHT" GridPane.rowIndex="1">
+               <font>
+                  <Font name="Georgia Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="139.0" layoutY="167.0" text="Add-Ons" GridPane.halignment="RIGHT" GridPane.rowIndex="2">
+               <font>
+                  <Font name="Georgia Bold" size="20.0" />
+               </font>
+            </Label>
+            <Label layoutX="120.0" layoutY="277.0" text="Quantity" GridPane.halignment="RIGHT" GridPane.rowIndex="3">
+               <font>
+                  <Font name="Georgia Bold" size="20.0" />
+               </font>
+            </Label>
+            <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" spacing="75.0" GridPane.columnIndex="1">
+               <children>
+                  <RadioButton fx:id="burgerSingle" mnemonicParsing="false" selected="true" text="Single">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                     <toggleGroup>
+                        <ToggleGroup fx:id="pattyGroup" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="burgerDouble" layoutX="60.0" layoutY="52.0" mnemonicParsing="false" text="Double" toggleGroup="$pattyGroup">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                  </RadioButton>
+               </children>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </HBox>
+            <HBox alignment="CENTER_LEFT" layoutX="253.0" layoutY="10.0" prefHeight="100.0" prefWidth="200.0" spacing="63.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
+               <children>
+                  <RadioButton fx:id="burgerBrioche" mnemonicParsing="false" selected="true" text="Brioche">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                     <toggleGroup>
+                        <ToggleGroup fx:id="breadGroup" />
+                     </toggleGroup>
+                  </RadioButton>
+                  <RadioButton fx:id="burgerWheat" layoutX="60.0" layoutY="52.0" mnemonicParsing="false" text="Wheat" toggleGroup="$breadGroup">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                  </RadioButton>
+                  <RadioButton fx:id="burgerPretzel" layoutX="264.0" layoutY="52.0" mnemonicParsing="false" text="Pretzel" toggleGroup="$breadGroup">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                     <padding>
+                        <Insets left="10.0" />
+                     </padding>
+                  </RadioButton>
+               </children>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </HBox>
+            <VBox alignment="CENTER_LEFT" prefHeight="200.0" prefWidth="100.0" spacing="25.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
+               <children>
+                  <CheckBox fx:id="burgerLettuce" mnemonicParsing="false" text="Lettuce">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                  </CheckBox>
+                  <CheckBox fx:id="burgerTomato" mnemonicParsing="false" text="Tomato">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                  </CheckBox>
+                  <CheckBox fx:id="burgerOnion" mnemonicParsing="false" text="Onion">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                  </CheckBox>
+                  <CheckBox fx:id="burgerAvocado" mnemonicParsing="false" text="Avocado">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                  </CheckBox>
+                  <CheckBox fx:id="burgerCheese" layoutX="60.0" layoutY="188.0" mnemonicParsing="false" text="Cheese">
+                     <font>
+                        <Font name="Georgia" size="20.0" />
+                     </font>
+                  </CheckBox>
+               </children>
+               <padding>
+                  <Insets left="50.0" />
+               </padding>
+            </VBox>
+            <ComboBox fx:id="burgerQuantity" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+               <GridPane.margin>
+                  <Insets left="50.0" />
+               </GridPane.margin>
+            </ComboBox>
+         </children>
+      </GridPane>
+   </center>
 </BorderPane>
